--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="betting-collect-section">
             <div class="betting-section" id="betting-section">
                 <div class="bet-options">
-                    <button class="bet-option">10.00 ₹</button>
-                    <button class="bet-option">100 ₹</button>
-                    <button class="bet-option">200 ₹</button>
-                    <button class="bet-option">500 ₹</button>
-                    <button class="bet-option">1000 ₹</button>
+                    <button class="bet-option" data-bet="10">10.00 ₹</button>
+                    <button class="bet-option" data-bet="100">100 ₹</button>
+                    <button class="bet-option" data-bet="200">200 ₹</button>
+                    <button class="bet-option" data-bet="500">500 ₹</button>
+                    <button class="bet-option" data-bet="1000">1000 ₹</button>
                 </div>
                 <button class="bet-button">BET 10.00 ₹</button>
             </div>
