--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="game-container">
         <!-- Wallet Section -->
         <div class="wallet-section">
-            <h3 id="wallet-balance">Wallet: ₹50</h3>
+            <h3 id="wallet-balance">₹50.00</h3>
         </div>
 
         <!-- Game Status -->
