--- a/index.html
+++ b/index.html
@@ -3,39 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aviator Crash Casino</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Aviator Crash Game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="game-container">
-        <h1>Aviator Crash Casino</h1>
+    <div class="container">
+        <h1>Aviator Crash Game</h1>
         <div class="game-area">
-            <div class="plane-container">
-                <img src="plane.png" class="plane" alt="plane">
-            </div>
-            <div class="crash-point-container">
-                <span class="crash-point"></span>
-            </div>
+            <div class="plane" id="plane"></div>
+            <div class="multiplier" id="multiplier">1.00x</div>
         </div>
-        <div class="bet-area">
-            <label for="bet-amount">Bet Amount:</label>
-            <input type="number" id="bet-amount" value="1">
-            <button id="bet-button">Place Bet</button>
+        <div class="controls">
+            <input type="number" id="betAmount" placeholder="Enter Bet Amount" min="1" />
+            <button id="placeBet">Place Bet</button>
+            <button id="cashOut" disabled>Cash Out</button>
         </div>
-        <div class="balance-area">
-            <span id="balance">Balance: $0</span>
+        <div class="history" id="history"></div>
+        <div class="withdrawal">
+            <h2>Withdrawal</h2>
+            <input type="number" id="withdrawAmount" placeholder="Amount to Withdraw" min="1" />
+            <button id="withdraw">Withdraw</button>
         </div>
-        <div class="withdrawal-area">
-            <label for="withdrawal-amount">Withdrawal Amount:</label>
-            <input type="number" id="withdrawal-amount" value="0">
-            <button id="withdrawal-button">Withdraw</button>
-        </div>
-        <div class="history-area">
-            <h2>Game History:</h2>
-            <ul id="history-list"></ul>
+        <div class="balance">
+            <h2>Balance: $<span id="balance">100</span></h2>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
