--- a/index.html
+++ b/index.html
@@ -3,31 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aviator Crash Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Open Website and Remove Element</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Aviator Crash Game</h1>
-        <div class="game-area">
-            <div class="plane" id="plane"></div>
-            <div class="multiplier" id="multiplier">1.00x</div>
-        </div>
-        <div class="controls">
-            <input type="number" id="betAmount" placeholder="Enter Bet Amount" min="1" />
-            <button id="placeBet">Place Bet</button>
-            <button id="cashOut" disabled>Cash Out</button>
-        </div>
-        <div class="history" id="history"></div>
-        <div class="withdrawal">
-            <h2>Withdrawal</h2>
-            <input type="number" id="withdrawAmount" placeholder="Amount to Withdraw" min="1" />
-            <button id="withdraw">Withdraw</button>
-        </div>
-        <div class="balance">
-            <h2>Balance: $<span id="balance">100</span></h2>
-        </div>
-    </div>
-    <script src="script.js"></script>
+
+    <!-- Button to open the website and remove the specified element -->
+    <button onclick="openAndRemoveElement()">Open Website</button>
+
+    <script>
+    function openAndRemoveElement() {
+        // Open the website in a new window
+        let url = "https://aviator-demo.spribegaming.com/?currency=INR&operator=demo&jurisdiction=CW&lang=EN&user=61082&token=nLGk1HIY6PjEQ87abfKA5J0AFp3axIrl";
+        let newWindow = window.open(url, '_blank');
+
+        // Wait until the website loads, then remove the specific element
+        newWindow.onload = function() {
+            // Use setTimeout to ensure the page content has fully loaded before manipulating the DOM
+            setTimeout(function() {
+                // Try to remove the element with the class 'fun-mode'
+                let element = newWindow.document.querySelector('.fun-mode');
+                if (element) {
+                    element.remove();  // Remove the element
+                    console.log("Element removed successfully.");
+                } else {
+                    console.log("Element not found.");
+                }
+            }, 2000); // Wait for 2 seconds before trying to remove the element (adjust timing if needed)
+        };
+    }
+    </script>
+
 </body>
 </html>
