--- a/index.html
+++ b/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Website and Remove Element</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Iframe</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f0f0f0;
+    }
+
+    .iframe-container {
+      width: 100%;
+      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
+  <div class="iframe-container">
+    <iframe src="https://www.yeschat.ai/i/gpts-9t55QsThKkD-TEXT-TO-EXCEL"></iframe>
+  </div>
 
-    <button onclick="openInIframe()">Open Website in iFrame</button>
-    <iframe id="myIframe" style="width: 100%; height: 500px; border: none;"></iframe>
+  <script>
+    // Adjust the iframe to fill the screen on resize
+    window.addEventListener('resize', () => {
+      const container = document.querySelector('.iframe-container');
+      container.style.width = `${window.innerWidth}px`;
+      container.style.height = `${window.innerHeight}px`;
+    });
 
-    <script>
-    function openInIframe() {
-        var iframe = document.getElementById("myIframe");
-        iframe.src = "https://aviator-demo.spribegaming.com/?currency=INR&operator=demo&jurisdiction=CW&lang=EN&user=61082&token=nLGk1HIY6PjEQ87abfKA5J0AFp3axIrl";
-
-        // After the iframe loads, try to remove the element
-        iframe.onload = function() {
-            try {
-                var iframeDocument = iframe.contentDocument || iframe.contentWindow.document;
-                var element = iframeDocument.querySelector('.fun-mode');
-                if (element) {
-                    element.remove();
-                    console.log("Element removed successfully.");
-                }
-            } catch (e) {
-                console.log("Cannot access iframe content: " + e);
-            }
-        };
-    }
-    </script>
-
+    // Trigger initial resize
+    window.dispatchEvent(new Event('resize'));
+  </script>
 </body>
 </html>
