--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Text To Excel File</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" href="TextToExcel.jpg">
+  
   <style>
     * {
       margin: 0;
