--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Text To Excel Preview</title>
+  <title>Fresh Preview: Text To Excel</title>
   
-  <!-- Favicon from online source -->
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="https://www.example.com/path-to-your-favicon.png">
   
   <style>
@@ -19,9 +19,19 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+    }
+
+    .loading-text {
+      font-size: 1.5rem;
+      color: #555;
+      text-align: center;
+      margin-top: 20%;
     }
 
     .iframe-container {
+      display: none; /* Initially hidden until the data is cleared */
       width: 100%;
       height: 100%;
       position: relative;
@@ -35,8 +45,52 @@
   </style>
 </head>
 <body>
+  <div class="loading-text">Preparing your fresh session... Please wait.</div>
   <div class="iframe-container">
     <iframe src="https://www.yeschat.ai/i/gpts-9t55QsThKkD-TEXT-TO-EXCEL" allowfullscreen></iframe>
   </div>
+
+  <script>
+    // Function to clear cache, cookies, and local storage
+    async function clearAllData() {
+      // Clear browser cache
+      if ('caches' in window) {
+        const cacheKeys = await caches.keys();
+        await Promise.all(cacheKeys.map(key => caches.delete(key)));
+        console.log('Cache cleared.');
+      }
+
+      // Clear cookies
+      document.cookie.split(";").forEach(cookie => {
+        document.cookie = cookie
+          .replace(/^ +/, "")
+          .replace(/=.*/, "=;expires=" + new Date(0).toUTCString() + ";path=/");
+      });
+      console.log('Cookies cleared.');
+
+      // Clear localStorage and sessionStorage
+      localStorage.clear();
+      sessionStorage.clear();
+      console.log('Local and session storage cleared.');
+
+      // Clear browsing history (limited to page reloads)
+      if (window.history && window.history.pushState) {
+        window.history.go(-(window.history.length));
+        console.log('Browsing history cleared.');
+      }
+    }
+
+    // Execute the clearing process, then load the iframe
+    async function initFreshSession() {
+      await clearAllData();
+
+      // Show the iframe once the clearing process is complete
+      document.querySelector('.loading-text').style.display = 'none';
+      document.querySelector('.iframe-container').style.display = 'block';
+    }
+
+    // Initiate the process
+    initFreshSession();
+  </script>
 </body>
 </html>
